k8s/service/k8s-service-template-deployment.yml
apiVersion: v1
kind: Namespace
metadata:
  name: service-namespace

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-template
  namespace: service-namespace
spec:
  replicas: 2
  selector:
    matchLabels:
      app: service-template
  template:
    metadata:
      labels:
        app: service-template
    spec:
      containers:
        - name: service-template
          image: shoubhikghosh83/service-template:latest
          resources:
            requests:
              memory: '512Mi'
              cpu: '500m'
            limits:
              memory: '1Gi'
              cpu: '1'
          ports:
            - name: http
              containerPort: 8091
          readinessProbe:
            httpGet:
              path: /demo/status
              port: http
            initialDelaySeconds: 20
            periodSeconds: 15
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /demo/status
              port: http
            initialDelaySeconds: 120
      imagePullSecrets:
        - name: demcred
