k8s/service/k8s-service-template-service.yml
apiVersion: v1
kind: Service
metadata:
  name: service-template
  namespace: service-namespace
  labels:
    app: service-template
spec:
  selector:
    app: service-template
  type: ClusterIP
  ports:
    - name: http
      port: 8080
